# DockerMonitor

./: README.md  config.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt
assets/: icons.py
attached_assets/: Pasted-Develop-a-Python-based-Desktop-Application-for-Ubuntu-titled-Dockify-a-Docker-container-monitoring-1746804674813.txt
core/: alerts.py  docker_client.py  mock_docker_client.py  monitor.py
db/: __init__.py  database.py
db/models/: __init__.py  alert_history.py  container_history.py  report.py  user.py  user_settings.py
db/services/: __init__.py  metrics_service.py  report_service.py  settings_service.py  user_service.py
scripts/: init_db.py
ui/: app.py  code_explorer.py  components.py  containers.py  metrics.py  overview.py  reports.py  settings.py  sidebar.py
ui/auth/: login.py  register.py
utils/: compat.py  config.py  exporters.py  globals.py  theme.py
