[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "customtkinter==5.2.0",
    "docker==6.1.3",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "pillow>=11.2.1",
    "plotly==5.15.0",
    "psutil==5.9.5",
    "pygments==2.15.1",
]
